# account-manager

./: .gitattributes  .gitignore  .gitlab-ci.yml  .lfsconfig  AccessRightInfo.cpp  AccessRightInfo.h  AccountDB.cpp  AccountDB.h  AccountDefine.h  AccountManager.cpp  AccountManager.h  AdapterHandler.cpp  AdapterHandler.h  BUILD.txt  CMakeLists.txt  Communicator.cpp  Communicator.h  Config.cpp  Config.h  Error.cpp  Error.h  LdapAuthentication.cpp  LdapAuthentication.h  LdapConfig.cpp  LdapConfig.h  LegacyHttp.h  LevelInfo.cpp  LevelInfo.h  Makefile  Server.cpp  UserInfo.cpp  UserInfo.h  Util.cpp  Util.h  VERSION.txt  makeall.sh  settings.cpp  settings.h
.github/workflows/: main.yml
account-manager/data/account-manager/: service.ini  settings.ini
configs/: config.json  ldap_config.json  settings.ini
configs/common/: config.json  settings.ini
configs/telstra/: config.json
doc/: spec.pptx  swagger.yaml
import/cppnetlib/src/: CMakeLists.txt
import/cppnetlib/src/libs/mime/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
import/cppnetlib/src/libs/network/example/: CTestTestfile.cmake  Makefile  cmake_install.cmake
import/cppnetlib/src/libs/network/experiment/: CTestTestfile.cmake  Makefile  cmake_install.cmake
import/cppnetlib/src/libs/network/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
import/cppnetlib/src/libs/network/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
import/gorilla/http/doc/: README.md
import/gorilla/http/include/http/: FileReader.h  HttpConnection.h  HttpResponse.h  HttpServer.h  HttpStatusCode.h  IRequestHandler.h  WebSocketHandler.h  mime.h
import/gorilla/http/lib/: HttpFramework.lib  HttpFrameworkD.lib
import/gorilla/http/src/: DeflateOutputStream.cpp  FileReader.cpp  HttpBoostPtree.cpp  HttpBoostPtree.h  HttpClient.cpp  HttpConnection.cpp  HttpDataItem.cpp  HttpDataItem.h  HttpDataManager.h  HttpHeaders.cpp  HttpQueryStrings.cpp  HttpQueryStrings.h  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpUtil.h  IOutputStream.h  StaticFileHandler.cpp  WebSocketHandler.cpp  WebSocketHandler.h  WebSocketHandlerV2.cpp  WebSocketHandlerV2.h  ptr.h
import/gorilla/log/: logger.cpp  logger.h  logger_config.cpp  logger_config.h
import/gorilla/utility/: debug.h  ini_file.cpp  string_helper.h
import/hash/: hash.c  hash_codec.hpp  sha1.h
import/json-develop/: json_tools.hpp
import/syslog/: syslog.c
output/: settings.ini
packaging/servicewrapper/: service.ini
packaging/systemd/: account-manager.service
prebuilts/boost/linux-x86_64/lib/: libboost_chrono.so.1.67.0  libboost_coroutine.so.1.67.0  libboost_date_time.so.1.67.0  libboost_fiber.so.1.67.0  libboost_iostreams.so.1.67.0  libboost_log_setup.so.1.67.0  libboost_math_tr1f.so.1.67.0  libboost_math_tr1l.so.1.67.0  libboost_python27.so.1.67.0  libboost_signals.so.1.67.0  libboost_stacktrace_addr2line.so.1.67.0  libboost_stacktrace_basic.so.1.67.0  libboost_unit_test_framework.so.1.67.0  libboost_wave.so.1.67.0
prebuilts/boost/win-x86_64/lib/: boost_atomic-vc140-mt-x64-1_67.lib  boost_chrono-vc140-mt-gd-x64-1_67.lib  boost_context-vc140-mt-gd-x64-1_67.lib  boost_coroutine-vc140-mt-gd-x64-1_67.lib  boost_coroutine-vc140-mt-x64-1_67.lib  boost_date_time-vc140-mt-gd-x64-1_67.lib  boost_date_time-vc140-mt-x64-1_67.lib  boost_filesystem-vc140-mt-gd-x64-1_67.lib  boost_iostreams-vc140-mt-gd-x64-1_67.lib  boost_locale-vc140-mt-gd-x64-1_67.lib  boost_locale-vc140-mt-x64-1_67.lib  boost_log-vc140-mt-x64-1_67.lib  boost_log_setup-vc140-mt-gd-x64-1_67.lib  boost_log_setup-vc140-mt-x64-1_67.lib  boost_program_options-vc140-mt-x64-1_67.lib  boost_random-vc140-mt-gd-x64-1_67.lib  boost_random-vc140-mt-x64-1_67.lib  boost_regex-vc140-mt-gd-x64-1_67.lib  boost_regex-vc140-mt-x64-1_67.lib  boost_system-vc140-mt-gd-x64-1_67.lib  boost_system-vc140-mt-x64-1_67.lib  boost_thread-vc140-mt-x64-1_67.lib  libboost_atomic-vc140-mt-gd-x64-1_67.lib  libboost_atomic-vc140-mt-x64-1_67.lib  libboost_chrono-vc140-mt-gd-x64-1_67.lib  libboost_chrono-vc140-mt-x64-1_67.lib  libboost_context-vc140-mt-gd-x64-1_67.lib  libboost_context-vc140-mt-x64-1_67.lib  libboost_coroutine-vc140-mt-x64-1_67.lib  libboost_date_time-vc140-mt-gd-x64-1_67.lib  libboost_date_time-vc140-mt-x64-1_67.lib  libboost_filesystem-vc140-mt-x64-1_67.lib  libboost_iostreams-vc140-mt-x64-1_67.lib  libboost_system-vc140-mt-gd-x64-1_67.lib  libboost_system-vc140-mt-x64-1_67.lib  libboost_thread-vc140-mt-x64-1_67.lib  libboost_zlib-vc140-mt-gd-x64-1_67.lib  libboost_zlib-vc140-mt-x64-1_67.lib
prebuilts/curl/include/curl/: curl.h  curlver.h  system.h  typecheck-gcc.h
prebuilts/openldap/include/: LDAPAsynConnection.h  LDAPAttrType.h  LDAPAttributeList.h  LDAPCompareRequest.h  LDAPConstraints.h  LDAPControl.h  LDAPMessageQueue.h  LDAPModDNRequest.h  LDAPModifyRequest.h  LDAPObjClass.h  LDAPRebindAuth.h  LDAPRequest.h  LDAPSearchReference.h  LDAPSearchRequest.h  LDAPSearchResults.h  LDAPUrlList.h  LdifWriter.h  StringList.h  TlsOptions.h
prebuilts/sasl2/linux-x86_64/lib/: libsasl2.la
prebuilts/sasl2/linux-x86_64/lib/pkgconfig/: libsasl2.pc
prebuilts/sasl2/linux-x86_64/lib/sasl2/: libanonymous.la  libanonymous.so.3.0.0  libcrammd5.la  libdigestmd5.la  libotp.la  libplain.la  libsasldb.la  libscram.la  libscram.so.3.0.0
prebuilts/win-x86_64/boost/include/boost/: cstdint.hpp
prebuilts/win-x86_64/boost/include/boost/asio/: basic_socket_iostream.hpp  basic_socket_streambuf.hpp  buffer.hpp  io_context.hpp  io_context_strand.hpp  read.hpp  write.hpp
prebuilts/win-x86_64/boost/include/boost/beast/: version.hpp
prebuilts/win-x86_64/boost/lib/: libboost_chrono-vc140-mt-x64-1_67.lib  libboost_iostreams-vc140-mt-x64-1_67.lib  libboost_zlib-vc140-mt-gd-x64-1_67.lib
scripts/: PackagingTool.py  build.bat  build.py  build.sh  delivery.py  distribution.py  packaging.bat  packaging.py  packaging.sh
tools/py/: installPack.py
windows/: AccountServer.sln  AccountServer.vcxproj  AccountServer.vcxproj.filters  BUILD.txt  account-manager.sln  gettimeofday.c  syslogc.c  wincompat.cpp
(+81 files in other folders)
